    two types of holders are distinguished with a prefix: `user:' and
    `project:'.

  * The quota API is extended to make project quota available.

  * Removed setting `ASTAKOS_PROJECTS_VISIBLE'; we now always display
    projects in Astakos menu.

* Projects can be set `private', making it accessible only to its owner and
  members.


.. _Changelog-0.15.1:

v0.15.1
=======

Released: Thu May 15 13:31:37 EEST 2014

Synnefo-wide
------------

* Documentation: New CentOS installation guide.
* Handle Unicode issue in proxy requests.

Astakos
-------

* Change statistics API to expose statistics for all users and for users
  per authentication provider (users that are exclusively using a provider).
* Fix minor problem in weblogin, which could lead to unexpected exception
* Fix Authenticate Identity API call with trailing slash, which used to fail
  with 405 (Method not allowed)

Cyclades
--------

* Fix bug in snf-dispatcher that could result in unsynced NICs between
  Cyclades and Ganeti.
* Support queries by IPv6 address in helpdesk app.
* Extend statistics API with detailed information about Ganeti clusters,
  virtual servers and networks, public IPv4 pools and images.
* Allow creation of ports with existing floating IPs from networks that are
  marked as drained.

Cyclades UI
-----------

* Include icons for Oracle Linux OS (oraclelinux)
* Include a null gateway IP when creating subnets for private networks to
  override the default gateway IP of Neutron API.

Pithos
------

* Support selectable storage backend

  * new settings:
   - PITHOS_BACKEND_STORAGE: Possible values are 'nfs' and 'rados'.
   - PITHOS_RADOS_CEPH_CONF: The Ceph configuration file.

* Remove unused variable PITHOS_RADOS_STORAGE
* Add 'pithos-sync-rados.sh' shell script in Pithos tools,
  a Pithos object synchronization tool from NFS to Rados.
* Fix missing Content-Disposition header in object response, which caused
  publicly shared objects to be saved with a meaningless name